--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,40 +1,79 @@
 @import "../../assets/scss/config.scss";
 
 .collapse {
-  margin: 10px 0;
-}
+  margin: 30px 0;
 
-.collapse button {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px;
-  width: 1023px;
-  height: 47px;
-  font-weight: 500;
-  background-color: $primary;
-  color: #ffffff;
-  border: none;
-  cursor: pointer;
-}
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    width: 1023px;
+    height: 47px;
+    font-weight: 500;
+    background-color: $primary;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
 
-.collapse button img {
-  width: 24px;
-  height: 13.71px;
-  margin-left: 10px;
-  transition: transform 0.2s ease-in-out;
-}
+    img {
+      width: 24px;
+      height: 13.71px;
+      margin-left: 10px;
+      transition: transform 0.2s ease-in-out;
+    }
 
-.collapse button.open img {
-  transform: rotate(180deg);
-}
+    &.open img {
+      transform: rotate(180deg);
+    }
+  }
 
-.collapse-content {
-  font-size: 24px;
-  max-width: 1023px;
-  padding: 20px;
-  background-color: #f6f6f6;
-  color: $primary;
-  border-top: none;
-  border-radius: 0 0 5px 5px;
+  .collapse-content {
+    font-size: 24px;
+    max-width: 1023px;
+    width: 100%;
+    padding: 20px;
+    background-color: #f6f6f6;
+    color: $primary;
+    border-top: none;
+    border-radius: 0 0 5px 5px;
+    word-wrap: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  @media #{$BREAKPOINT-TABLETS} {
+    button {
+      width: 600px;
+    }
+    .collapse-content {
+      font-size: 20px;
+      padding: 15px;
+      width: 600px;
+    }
+  }
+
+  @media #{$BREAKPOINT-MOBILE} {
+   
+      margin: 20px 0;
+  
+    button {
+      font-size: 13px !important;
+      height: 30px;
+      padding: 5px 10px;
+      width: 335px;
+
+      img {
+        width: 20px;
+        height: 11.47px;
+        margin-left: 5px;
+      }
+    }
+
+    .collapse-content {
+      font-size: 12px !important;
+      width: 335px;
+      padding: 10px;
+    }
+  }
 }
