--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,8 @@
 @import "../../assets/scss/config.scss";
 
 .ContainerFooter {
+  position: relative;
+
   background-color: $dark;
   bottom: 0;
   color: $secondary;
@@ -23,4 +25,21 @@
     margin-bottom: 29px;
     font-size: 24px;
   }
+
+  @media #{$BREAKPOINT-TABLETS} {
+    width: 100vh;
+    p {
+      font-size: 18px;
+    }
+  }
+
+  @media #{$BREAKPOINT-MOBILE} {
+    p {
+      margin-bottom: 15px;
+      font-size: 12px;
+    }
+    width: 100%;
+  }
+
+  width: 100%;
 }
