--- a/src/components/style/Banner.css
+++ b/src/components/style/Banner.css
@@ -26,4 +26,42 @@
   color: #f6f6f6;
   font-size: 48px;
   font-weight: 500;
+}
+@media only screen and (max-width : 768px) {
+  .main-container {
+    width: 768px;
+    height: 150px;
+    top: 120px;
+    margin-top: 50px;
+  }
+  .main-container .opacityBg {
+    max-width: 768px;
+    height: 150px;
+  }
+  .main-container .opacityBg h1 {
+    font-size: 36px;
+  }
+}
+@media only screen and (max-width : 480px) {
+  .main-container {
+    width: 335px;
+    height: 111px;
+    top: 80px;
+    margin-top: 30px;
+  }
+  .main-container .opacityBg {
+    max-width: 335px;
+    height: 111px;
+  }
+  .main-container .opacityBg .banner-text {
+    display: flex;
+    flex-direction: column;
+    font-size: 24px;
+  }
+  .main-container .opacityBg .banner-text span:first-child {
+    width: 100%;
+  }
+  .main-container .opacityBg .banner-text span:last-child {
+    white-space: pre-wrap;
+  }
 }/*# sourceMappingURL=Banner.css.map */
