--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -1,12 +1,10 @@
 @import "../../assets/scss/config.scss";
 
+
 .home-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  
-
 
   .gallery {
     padding: 50px;
@@ -18,5 +16,20 @@
     background-color: $secondary;
     border-radius: 25px;
     gap: 30px;
+
+    @media #{$BREAKPOINT-TABLETS} {
+      padding: 30px;
+      gap: 20px;
+      border-radius: 20px;
+      background-color: transparent;
+    }
+
+    @media #{$BREAKPOINT-MOBILE} {
+      padding: 20px;
+      gap: 10px;
+      border-radius: 15px;
+      background-color: transparent;
+      
+    }
   }
 }
