--- a/src/views/style/Lodging.css
+++ b/src/views/style/Lodging.css
@@ -9,16 +9,28 @@
   flex-direction: column;
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0 20px;
+}
+@media only screen and (max-width : 1200px) {
+  .mainLodging {
+    padding: 0;
+  }
 }
 
 .lodging-info {
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  justify-content: space-between;
-  padding: 20px 100px 0px 100px;
+  align-items: center;
+  padding: 20px;
+}
+@media only screen and (max-width : 1200px) {
+  .lodging-info {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px 100px 0px 100px;
+  }
 }
 
 .titleLodging {
@@ -54,10 +66,9 @@
   max-width: 30%;
   justify-content: flex-end;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width : 1200px) {
   .ProfilLodging p {
-    margin-right: 0;
-    margin-bottom: 10px;
+    max-width: none;
   }
 }
 
@@ -67,29 +78,58 @@ img {
 
 .tagContainer {
   display: flex;
-  justify-content: space-between;
-  margin: 0px 100px 0px 100px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+@media only screen and (max-width : 1200px) {
+  .tagContainer {
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0px 100px 0px 100px;
+  }
 }
 .tagContainer .tags {
   display: flex;
-  margin-left: 0px;
+  margin: 10px 0;
+}
+@media only screen and (max-width : 1200px) {
+  .tagContainer .tags {
+    margin: 0px;
+  }
 }
 
 .equipementContainer {
-  margin: 0px 100px 0px 100px;
+  margin: 20px 0;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media only screen and (max-width : 1200px) {
+  .equipementContainer {
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0px 100px 0px 100px;
+  }
 }
 .equipementContainer .description,
 .equipementContainer .equipments {
-  width: 582px;
-  font-size: 18px;
+  margin-bottom: 20px;
 }
 .equipementContainer .description button,
 .equipementContainer .equipments button {
   border-radius: 10px;
-  width: 582px;
   font-size: 18px;
+  width: 100%;
+  max-width: 582px;
+}
+@media only screen and (max-width : 1200px) {
+  .equipementContainer .description,
+  .equipementContainer .equipments {
+    margin-bottom: 0px;
+  }
 }
 .equipementContainer ul {
   list-style-type: none;
